<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DailyCal</string>
    <string name="input_history">Input history</string>
    <string name="hello_world">Hello world!</string>
    <string name="cal_add_hint">Add calories</string>
    <string name="cal_add_button_hint">Add</string>
    <string name="macros_label">Macros</string>
    <string name="goal_label">Goal</string>
    <string name="consumed_label">Consumed</string>
    <string name="calorie_label">Calories:</string>
    <string name="carb_label">Carbs:</string>
    <string name="protein_label">Proteins:</string>
    <string name="fat_label">Fats:</string>
    <color name="gray">#C0C0C0</color>
    <string name="default_hint">Default</string>
    <string name="starting_value">0</string>
    <string name="wipe_data">Wipe data</string>

</resources>